--- a/Frontend/Dockerfile
+++ b/Frontend/Dockerfile
@@ -10,7 +10,8 @@ ENV PATH /usr/src/app/node_modules/.bin:$PATH
 # install app dependencies
 COPY package.json .
 COPY yarn.lock .
-RUN yarn install --production
+# RUN npm install --production
+RUN npm install
 
 # copy project
 COPY . .
