--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,20 +43,21 @@ services:
 
   acharya-client:
     build:
-      context: ./client
-    command: yarn start
+      context: ./Frontend
+    # command: yarn start
+    command: npm start
     container_name: taxi-client
     depends_on:
       - acharya-server
     environment:
-      - CHOKIDAR_USEPOLLING=true
+      # - CHOKIDAR_USEPOLLING=true
       - REACT_APP_BASE_URL=http://localhost:8003
-      - REACT_APP_GOOGLE_MAPS_KEY=<YOUR_API_KEY>
+      # - REACT_APP_GOOGLE_MAPS_KEY=<YOUR_API_KEY>
     ports:
       - 3001:3000
     stdin_open: true
     volumes:
-      - ./client:/usr/src/app
+      - ./Frontend:/usr/src/app
 
 volumes:
   acharya-database:
