--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -1,14 +1,14 @@
-bitsandbytes
-git+https://github.com/huggingface/transformers.git
-git+https://github.com/huggingface/peft.git
-git+https://github.com/huggingface/accelerate.git
-einops
-safetensors
-torch
-xformers
-langchain
-ctransformers[cuda]
-chromadb
-sentence-transformers
+# bitsandbytes
+# git+https://github.com/huggingface/transformers.git
+# git+https://github.com/huggingface/peft.git
+# git+https://github.com/huggingface/accelerate.git
+# einops
+# safetensors
+# torch
+# xformers
+# langchain
+# ctransformers[cuda]
+# chromadb
+# sentence-transformers
 fastapi
 uvicorn
