--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -9,9 +9,11 @@
     "@heroicons/react": "^2.1.1",
     "@mui/icons-material": "^5.15.2",
     "@mui/material": "^5.15.2",
+    "@react-oauth/google": "^0.12.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-loader-spinner": "^6.1.6",
